Final cleanup: All IDE warnings resolved